--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ nav {
 	transform: translate(-50%, -50%);
 	z-index: 1;
 }
-#ok{
+#ok {
 	background-color: rebeccapurple;
 	border-radius: 10px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
@@ -71,7 +71,15 @@ nav {
 }
 .timer {
 	color: white;
+	display: flex;
 	font-size: 2.5rem;
+	gap: 1rem;
+}
+.time {
+	display: flex;
+	justify-content: center;
+	width: 15rem;
+	gap: 1rem;
 }
 #subtract,
 #add {
